# DogeEngine

./: CMakeLists.txt  Camera.hpp  Engine.hpp  GLTFLoader.hpp  GUI.hpp  GameObject.hpp  Helper.hpp  Light.hpp  Material.hpp  Node.hpp  PhysicsManager.hpp  Picker.hpp  README.md  Renderer.hpp  SceneFileManager.hpp  Shader.hpp  Texture.hpp  Window.hpp  main.cpp
Dependencies/: CMakeLists.txt  glad.c
shaders/: main.fs  main.vs  shadow.vs
